25.0.3
------
(RB=1432090)
Add a new constructor for RestLiServiceException to disable stacktrace inclusion.

25.0.2
------
(RB=1427726)
Fix an integration test to test client side streaming correctly. Also updating the error created when stream decoding fails.

(RB=1430734)
Don't expose rest.li client config and run scatter gather tests in parallel.

25.0.1
------
(RB=1413782)
Improve how circular references involving includes are handled in schema parser.

(RB=1417886)
Change backupRequest so that it can work when d2 host hint is given

(RB=1415236)
Relax typeref circular references, disallowing typeref-only cycles.
Provide better error message when cycles are detected.

25.0.0
------
(RB=1425050)
Making RestLiResponseException constructor public.

(RB=1414869)
Fix ActionResult bug to return an empty response body

(RB=1418767)
Preserve order of sets added to request builders.

(RB=1417423)
Look up Javadoc by correct custom parameter name.

24.0.2
------
(RB=1415193)
Generating fat jar for restli-int-test-api to maven.

(RB=1407938)
Add client-side support for returning the entity with PARTIAL_UPDATE

(RB=1413596)
Support starting rest.li integration test server without document handler.

24.0.1
------
(RB=1411239)
Make bannedUris field optional

24.0.0
-------
(RB=1411483)
Disable test that fails consistently in TMC and passes consistently in local box

(RB=1410320)
Bump major version and update gradle.properties for release

(RB=1409272)
Refactor some code for ease of access in pemberly-api

(RB=1408119)
Fix test relying on string error message

(RB=1402300)
Implement blocking and non blocking smile data codec

(RB=1344653)
Support returning the entity for PARTIAL_UPDATE resource methods

(RB=1394500)
D2 merging clientOverridesProperties into the serviceProperties at deserialization time.

(RB=1402795)
D2 adding REQUEST_TIMEOUT_IGNORE_IF_HIGHER_THAN_DEFAULT parameter to request context's request

23.0.19
-------
(RB=1398083)